# usajobsmapper

./: .gitignore  Cargo.toml  README.md  added_locations.txt  example_config.toml
src/: hbs.rs  main.rs  search.rs  setup.rs
src/search/: parse_utils.rs  query.rs
static/css/: main.css
static/js/: add_div.js  locations.js  main.js  mapper.js  mobile.js  search.js
templates/: index.html.hbs  nav.html.hbs
templates/search/: base.html.hbs  index.html.hbs  locations.html.hbs  nav.html.hbs  notes.html.hbs
templates/search/errors/: 404.html.hbs
