[package]
name = "usajobsmapped"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rocket = { path = "../Rocket/core/lib" }
# rocket = "*"
# figment = { version = "0.9", features = ["toml"]}
figment = "0.10.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket]
path = "../Rocket/core/lib"
features = ["json", "msgpack", "uuid"]

[dependencies.rocket_dyn_templates]
path = "../Rocket/contrib/dyn_templates"
features = ["handlebars"]
